# Open-Weather-Desktop

./: CMakeLists.txt  CMakeSettings.json  README.md  install_deps.bat
src/: Application.cpp  Application.h  Common.h  HttpModule.cpp  HttpModule.h  JsonModule.cpp  JsonModule.h  main.cpp
